# wlev2harmonic

./: .gitignore  00001c20110101a.wlev  CMakeLists.txt  VERSION.cmake  wlev2harmonic.fbp
data/: wlev2harmonic.desktop
include/: version.h  wlev.h  wlev2harmonic.h
po/: POTFILES.in  wlev2harmonic.pot  wlev2harmonic_cs_CZ.mo  wlev2harmonic_cs_CZ.po
src/: wlev.cpp  wlev2harmonic.cpp  wlev2harmonic.rc  wlev2harmonic.rc.in  wlev2harmonicgui.cpp  wlev2harmonicgui.h  wlev2harmonicguidef.cpp  wlev2harmonicguidef.h
src/bitmaps/: create_all.sh  wlev2harmonic.xpm
src/bitmaps/other_svg_src/: create_opencpn_main_icon.sh
